--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
 <body>
 
 <div class="wrapper">
-
-  <nav class="topnav">
-      <a href="XXXXXX">Home</a>
-      <a href="XXXXXX">About</a>
-      <a href="XXXXXX">Menu</a>
-      <a href="XXXXXX">Contact</a>
-  </nav>
-      
+  <div id="home"></div>    
 <section class="module parallax parallax-1">
   <div class="landing">
     <img src="img/tenjilogo-01.png">
@@ -36,20 +29,35 @@
   </div>
 </section>
 
+  <div id="stickynav-container">
+        <div id="stickynav">
+            <div class="nav-container">
+                <ul class="navleft">
+                    <li><a href="XXXXX">Facebook</a></li>
+                    <li><a href="XXXXX">Twitter</a></li>
+                </ul>
+                <ul class="navright">
+                    <li><a href="#home" class="selected">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#menu">menu</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 <section class="module content chef">
-  <div class="chef-container">
+  <div id="about"></div>  
+  <div class="chef-container" id="startchange">
     <img src="img/sushichef.jpg" class="chefleft">
       <h2 class="chefright">About Tenji</h2>
-      <p class="chefright">Sushi Chef Tenji Takahashi
+      <p class="chefright">In 1985, Master sushi chef, Tenji Takahashi, opened his first of 6 Japanese restaurants in the heart of New York City. His blending of classical Japanese ingredients with modern  techniques and inovations sets the bar that others aspire to meet.
 
-      In 1985, Master sushi chef, Tenji Takahashi, opened his first of 6 Japanese restaurants in the heart of New York City. His blending of classical Japanese ingredients with modern  techniques and inovations sets the bar that others aspire to meet.
-
-      Takahashi was born in Fukushima, Japan. Yasu’s parents owned a small fish store and the family dined out often. As a small boy he decided to become a chef after his father took him to an up-scale authentic Japanese restaurant. After studying in Tokyo, Yasu took a job with Global Dining’s Japanese restaurant Gonpachi. In 1983, Tenji moved to the United States and quickly began the process to open his first restaurant.</p>
+      Takahashi was born in Fukushima, Japan. Yasu’s parents owned a small fish store and the family dined out often. As a small boy he decided to become a chef after his father took him to an up-scale authentic Japanese restaurant. After studying in Tokyo, Tenji took a job with Global Dining’s Japanese restaurant Gonpachi. In 1983, Tenji moved to the United States and quickly began the process to open his first restaurant.</p>
   </div>
 </section>
 
 <div class="clear"></div>
-
+<div id="menu"></div>  
 <section class="module parallax parallax-2">
   <div class="section-title">
     <h1>Signature Dishes</h1>
@@ -475,6 +483,7 @@
 </section>
 
 <section class="module parallax parallax-4">
+  <div id="contact"></div>  
   <div class="section-title">
     <h1>Contact</h1>
   </div>
@@ -495,7 +504,7 @@
 
 <!-- ads -->
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="js/fusionad.js"></script>
+<script src="js/stickynav.js"></script>
 <script src="js/scripts.js" type="text/javascript"></script>
 
 
