--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="//use.typekit.net/cfo8pdx.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
-  <link href='http://fonts.googleapis.com/css?family=Halant:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
 
@@ -26,7 +26,7 @@
 <section class="module parallax parallax-1">
   <div class="landing">
     <img src="img/tenjilogo-01.png">
-    <h3>2345 W. MacDougal Ave. New York, NY 10004</h3>
+    <h3>30 YEARS TO MASTER. YOURS TO SAVOR.</h3>
     <a href="#0" class="popup-trigger" id="launch">Make A Reservation</a>
 
     <div class="popup" role="alert">
@@ -134,7 +134,7 @@
 <section class="module content" id="about">
   <div class="chef-container" id="startchange">
     <img src="img/sushichef-2.jpg" class="chefleft">
-      <h2 class="chefright">About Tenji</h2>
+      <h2 class="chefright">ABOUT TENJI</h2>
       <p class="chefright">In 1985, Master sushi chef, Tenji Takahashi, opened his first of 6 Japanese restaurants in the heart of New York City. His blending of classical Japanese ingredients with modern  techniques and inovations sets the bar that others aspire to meet.
 
       Takahashi was born in Fukushima, Japan. Yasu’s parents owned a small fish store and the family dined out often. As a small boy he decided to become a chef after his father took him to an up-scale authentic Japanese restaurant. After studying in Tokyo, Tenji took a job with Global Dining’s Japanese restaurant Gonpachi. In 1983, Tenji moved to the United States and quickly began the process to open his first restaurant.</p>
@@ -222,38 +222,38 @@
           <div class="menu-items">
             <div class="left">
               <h5>White Wine</h5>
-              <h3>Water Brook '14 (Chardonnay) 32</h3>
-              <h3>Pacific Rim '12 (Reisling) 39</h3>
-              <h3>Archery Summir '13 (Pinot Gris) 45</h3>
-              <h3>Songbird '13 (Sauvignon Blanc) 32</h3>
+              <h3>Water Brook '14 (Chardonnay)</h3>
+              <h3>Pacific Rim '12 (Reisling)</h3>
+              <h3>Archery Summir '13 (Pinot Gris)</h3>
+              <h3>Songbird '13 (Sauvignon Blanc)</h3>
 
               <h5>Red Wine</h5>
-              <h3>Primarius '12 (Pinot Noir) 40</h3>
-              <h3>Mercer Canyons '13 (Cabernet) 40</h3>
-              <h3>Gifford '12 (Cabernet) 62</h3>
+              <h3>Primarius '12 (Pinot Noir)</h3>
+              <h3>Mercer Canyons '13 (Cabernet)</h3>
+              <h3>Gifford '12 (Cabernet)</h3>
 
               <h5>Non-Alcoholic</h5>
-              <h3>Soda 4</h3>
-              <h3>Tea 3</h3>
-              <h3>Coffee 3</h3>
+              <h3>Soda</h3>
+              <h3>Tea</h3>
+              <h3>Coffee</h3>
 
             </div>
             <div class="right">
               <h5>Sake</h5>
-              <h3>Hatsumago (Yamagata) 24</h3>
-              <h3>Otokoyama (Hokkaido) 24</h3>
-              <h3>Onikoroshi (Shizuoka) 38</h3>
-              <h3>Jozen (Niigata) 49</h3>
-              <h3>Harushika (Nara) 58</h3>
-              <h3>Mu (Hyogo) 65</h3>
-              <h3>Dassai (Yamagata) 82</h3>
-              <h3>Hakkaisan (Niigata) 69</h3>
-              <h3>Kubota (Niigata) 155</h3>
-              <h3>Tsukuba (Ibaragi) 200</h3>
-              <h3>Arabashiri (Yabuta) 200</h3>
-              <h3>Jozo (Niigata) 210</h3>
-              <h3>Hot Sake (Gekkeikan) 8/14</h3>
-              <h3>Nigori (Yaegaki) 8/16</h3>
+              <h3>Hatsumago (Yamagata)</h3>
+              <h3>Otokoyama (Hokkaido)</h3>
+              <h3>Onikoroshi (Shizuoka)</h3>
+              <h3>Jozen (Niigata)</h3>
+              <h3>Harushika (Nara)</h3>
+              <h3>Mu (Hyogo)</h3>
+              <h3>Dassai (Yamagata)</h3>
+              <h3>Hakkaisan (Niigata)</h3>
+              <h3>Kubota (Niigata)</h3>
+              <h3>Tsukuba (Ibaragi)</h3>
+              <h3>Arabashiri (Yabuta)</h3>
+              <h3>Jozo (Niigata)</h3>
+              <h3>Hot Sake (Gekkeikan)</h3>
+              <h3>Nigori (Yaegaki)</h3>
             </div>
           </div>
         </div>
@@ -442,41 +442,34 @@
 </section>
 
 <section class="module parallax parallax-4">
-  <div id="contact"></div>  
-  <div class="section-title">
-  </div>
 </section>
 
 <section class="module content">
   <div class="contact-container">
-    <h1>Contact</h1>
-    <div class="hours">
-        <h5>Hours</h5>
-        <h3>Monday: 11:00-12:00</h3>
-        <h3>Tuesday: 11:00-12:00</h3>
-        <h3>Wednesday: 11:00-12:00</h3>
-        <h3>Thursday: 11:00-12:00</h3>
-        <h3>Friday: 11:00-12:00</h3>
-        <h3>Saturday: 11:00-12:00</h3>
-        <h3>Sunday: 11:00-12:00</h3>
-    </div>
 
-    <div class="contact"> 
-      <h5>Let's Talk!</h5>
-      <form class="genform" action="#" method="post" name="genform">
-        <ul>
-          <li><input type="email" name="email" placeholder="Name" required /></li>
-          <li><input type="email" name="email" placeholder="E-mail" required /></li> 
-          <li><textarea name="message" cols="40" rows="6" placeholder="Message" required ></textarea></li>
-        
-          <div id="formBtn"><button class="submit" type="submit">Send</button></div>        
-        </ul>
-      </form>
-    </div>
+    <h1>Contact</h1>
+
+    <div class="contact">
+      <ul>
+        <h3>CONTACT INFO</h3>
+        <li>+(578)555-1111</li>
+        <li>tenjisushiny@tenjisushi.com</li>
+      </ul>
+      <ul>
+        <h3>ADDRESS</h3>
+        <li>2345 W. MacDougal Ave.</li>
+        <li>New York, NY 10004</li>
+      </ul>
+      <ul>
+        <h3>HOURS</h3>
+        <li>Mon - Thurs: 10:00am-12:00am</li>
+        <li>Fri - Sat: 11:00am-2:00am</li>
+        <li>Wednesday: 10:00am-10:00pm</li>
+      </ul>
+    </div>  
 
     <div class="map">
-      <h3>2345 W. MacDougal Ave. New York, NY 10004</h3>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d96791.4532370135!2d-73.98595127914575!3d40.70187954429444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1421261731503" width="400" height="300" frameborder="0" style="border:0"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d96791.4532370135!2d-73.98595127914575!3d40.70187954429444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1421261731503" width="400" height="250" frameborder="0" style="border:0"></iframe>
     </div>
 
   </div>
