--- a/index.html
+++ b/index.html
@@ -475,8 +475,11 @@
   </div>
 </section>
   
-  
 </div><!-- /#wrapper -->
+
+<footer>
+  <h6>© Tenji Sushi New York. All Rights Reserved.</h6>
+</footer>
 
 <!-- ads -->
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
