--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <h5>Kappa</h5>
         <h6>Cucumber, rice, and sesame seed served in our specialty soy sauce.</h6>
       </div>
-
+<div class="clear"></div>
       <div class="signature">
         <img src="img/sushi-4.jpg" alt="">
         <h5>$21</h5>
