--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 <section class="module content">
   <div class="signature-container">
-        <h1>Signature Dishes</h1>
+      <h1>Signature Dishes</h1>
       <div class="signature">
         <img src="img/sushi-1.jpg" alt="">
         <h5>$17</h5>
@@ -172,7 +172,8 @@
         <h5>Kappa</h5>
         <h6>Cucumber, rice, and sesame seed served in our specialty soy sauce.</h6>
       </div>
-<div class="clear"></div>
+  </div>
+  <div class="signature-container">
       <div class="signature">
         <img src="img/sushi-4.jpg" alt="">
         <h5>$21</h5>
