--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         <h6>Cucumber, rice, and sesame seed served in our specialty soy sauce.</h6>
       </div>
   </div>
+  <div class="clear"></div>
   <div class="signature-container">
       <div class="signature">
         <img src="img/sushi-4.jpg" alt="">
