--- a/index.html
+++ b/index.html
@@ -220,39 +220,39 @@
         <div id="beverages" class="tab active">
           <div class="menu-items">
             <div class="left">
-              <h5>White Wine</h5>
-              <h3>Water Brook '14 (Chardonnay)</h3>
-              <h3>Pacific Rim '12 (Reisling)</h3>
-              <h3>Archery Summir '13 (Pinot Gris)</h3>
-              <h3>Songbird '13 (Sauvignon Blanc)</h3>
+              <div class="pricing"><h5>White Wine</h5></div>
+              <div class="pricing"><h3>Water Brook '14 (Chardonnay)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Pacific Rim '12 (Reisling)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Archery Summir '13 (Pinot Gris)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Songbird '13 (Sauvignon Blanc)</h3><h3>$20</h3></div>
 
-              <h5>Red Wine</h5>
-              <h3>Primarius '12 (Pinot Noir)</h3>
-              <h3>Mercer Canyons '13 (Cabernet)</h3>
-              <h3>Gifford '12 (Cabernet)</h3>
+              <div class="pricing"><h5>Red Wine</h5></div>
+              <div class="pricing"><h3>Primarius '12 (Pinot Noir)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Mercer Canyons '13 (Cabernet)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Gifford '12 (Cabernet)</h3><h3>$20</h3></div>
 
-              <h5>Non-Alcoholic</h5>
-              <h3>Soda</h3>
-              <h3>Tea</h3>
-              <h3>Coffee</h3>
+              <div class="pricing"><h5>Non-Alcoholic</h5></div>
+              <div class="pricing"><h3>Soda</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Tea</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Coffee</h3><h3>$20</h3></div>
 
             </div>
             <div class="right">
-              <h5>Sake</h5>
-              <h3>Hatsumago (Yamagata)</h3>
-              <h3>Otokoyama (Hokkaido)</h3>
-              <h3>Onikoroshi (Shizuoka)</h3>
-              <h3>Jozen (Niigata)</h3>
-              <h3>Harushika (Nara)</h3>
-              <h3>Mu (Hyogo)</h3>
-              <h3>Dassai (Yamagata)</h3>
-              <h3>Hakkaisan (Niigata)</h3>
-              <h3>Kubota (Niigata)</h3>
-              <h3>Tsukuba (Ibaragi)</h3>
-              <h3>Arabashiri (Yabuta)</h3>
-              <h3>Jozo (Niigata)</h3>
-              <h3>Hot Sake (Gekkeikan)</h3>
-              <h3>Nigori (Yaegaki)</h3>
+              <div class="pricing"><h5>Sake</h5></div>
+              <div class="pricing"><h3>Hatsumago (Yamagata)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Otokoyama (Hokkaido)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Onikoroshi (Shizuoka)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Jozen (Niigata)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Harushika (Nara)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Mu (Hyogo)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Dassai (Yamagata)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Hakkaisan (Niigata)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Kubota (Niigata)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Tsukuba (Ibaragi)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Arabashiri (Yabuta)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Jozo (Niigata)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Hot Sake (Gekkeikan)</h3><h3>$20</h3></div>
+              <div class="pricing"><h3>Nigori (Yaegaki)</h3><h3>$20</h3></div>
             </div>
           </div>
         </div>
@@ -260,62 +260,62 @@
         <div id="allacarte" class="tab">
           <div class="menu-items">
             <div class="left">
-              <h5>Appetizers</h5>
-              <h3>Edamame</h3>
+              <div class="pricing"><h5>Appetizers</h5></div>
+              <div class="pricing"><h3>Edamame</h3><h3>$20</h3></div>
               <p>Boiled Young Soy Beans</p>
 
-              <h3>Shishito Pepper</h3>
+              <div class="pricing"><h3>Shishito Pepper</h3><h3>$20</h3></div>
               <p>Flash fried and sautéed with splash soy</p>
 
-              <h3>Fresh Oysters</h3>
+              <div class="pricing"><h3>Fresh Oysters</h3><h3>$20</h3></div>
               <p>Half dozen local oysters on the half shell</p>
 
-              <h3>Kani-Su</h3>
+              <div class="pricing"><h3>Kani-Su</h3><h3>$20</h3></div>
               <p>King crab in ponzu</p>
 
-              <h3>Chawanmushi</h3>
+              <div class="pricing"><h3>Chawanmushi</h3><h3>$20</h3></div>
               <p>Steamed egg custard w/shrimp, white fish, shiitake mushrooms and mitsuba</p>
 
-              <h5>Deep Fried</h5>
-              <h3>Geso Kara-age</h3>
+              <div class="pricing"><h5>Deep Fried</h5></div>
+              <div class="pricing"><h3>Geso Kara-age</h3><h3>$20</h3></div>
               <p>Deep-Fried Squid Legs</p>
 
-              <h3>Chicken Kara-age</h3>
+              <div class="pricing"><h3>Chicken Kara-age</h3><h3>$20</h3></div>
               <p>Japanese style deep-fried chicken wings</p>
 
-              <h3>Soft Shell Crab</h3>
+              <div class="pricing"><h3>Soft Shell Crab</h3><h3>$20</h3></div>
               <p>Deep-fried soft shell crab served w/ponzu sauce</p>
 
-              <h3>Agedashi Tofu</h3>
+              <div class="pricing"><h3>Agedashi Tofu</h3><h3>$20</h3></div>
               <p>Deep-fried Tofu served in Tempura sauce with grated Daikon and Scallions</p>
 
             </div>
             <div class="right">
-              <h5>Broiled</h5>
-              <h3>Geoduck Butter</h3>
+              <div class="pricing"><h5>Broiled</h5></div>
+              <div class="pricing"><h3>Geoduck Butter</h3><h3>$20</h3></div>
               <p>Tender Geoduck, Shiitake Mushroom and Asparagus sautéed with butter</p>
 
-              <h3>Hamachi Kama</h3>
+              <div class="pricing"><h3>Hamachi Kama</h3><h3>$20</h3></div>
               <p>Broiled yellowtail collar</p>
 
-              <h3>Salmon Kama</h3>
+              <div class="pricing"><h3>Salmon Kama</h3><h3>$20</h3></div>
               <p>Broiled salmon collar</p>
 
-              <h5>Soups</h5>
-              <h3>Asari Miso Soup</h3>
+              <div class="pricing"><h5>Soups</h5></div>
+              <div class="pricing"><h3>Asari Miso Soup</h3><h3>$20</h3></div>
               <p>Miso soup with local Manila Clams and Mitsuba</p>
 
-              <h3>Tofu Miso Soup</h3>
+              <div class="pricing"><h3>Tofu Miso Soup</h3><h3>$20</h3></div>
               <p>Miso soup with Tofu and Mitsuba</p>
 
-               <h5>Salads</h5>
-              <h3>Seawead Salad</h3>
+               <div class="pricing"><h5>Salads</h5></div>
+              <div class="pricing"><h3>Seawead Salad</h3><h3>$20</h3></div>
               <p>Seaweed, wakame and cucumber in house-made vinaigrette</p>
 
-              <h3>Seafood Salad</h3>
+              <div class="pricing"><h3>Seafood Salad</h3><h3>$20</h3></div>
               <p>Mixed organic green with assortment of sashimi served with wasabi-mayo-ponzu dressing</p>
 
-              <h3>Spinach Salad</h3>
+              <div class="pricing"><h3>Spinach Salad</h3><h3>$20</h3></div>
               <p>Mixed organic green with assortment of sashimi served with wasabi-mayo-ponzu dressing</p>
             </div>
           </div>
@@ -324,80 +324,80 @@
         <div id="sushi" class="tab">
         <div class="menu-items">
             <div class="left">
-              <h5>Sashimi</h5>
-              <h3>Salmon</h3>
+              <div class="pricing"><h5>Sashimi</h5></div>
+              <div class="pricing"><h3>Salmon</h3><h3>$20</h3></div>
 
-              <h3>Tuna</h3>
+              <div class="pricing"><h3>Tuna</h3><h3>$20</h3></div>
 
-              <h3>Yellow Tail</h3>
+              <div class="pricing"><h3>Yellow Tail</h3><h3>$20</h3></div>
 
-              <h3>King Crab</h3>
+              <div class="pricing"><h3>King Crab</h3><h3>$20</h3></div>
 
-              <h3>Fatty Tuna</h3>
+              <div class="pricing"><h3>Fatty Tuna</h3><h3>$20</h3></div>
 
-              <h3>Flounder</h3>
+              <div class="pricing"><h3>Flounder</h3><h3>$20</h3></div>
 
-              <h3>Fresh Water Eel</h3>
+              <div class="pricing"><h3>Fresh Water Eel</h3><h3>$20</h3></div>
 
-              <h3>Geoduck</h3>
+              <div class="pricing"><h3>Geoduck</h3><h3>$20</h3></div>
 
-              <h3>King Mackerel</h3>
+              <div class="pricing"><h3>King Mackerel</h3><h3>$20</h3></div>
 
-              <h3>Octopus</h3>
+              <div class="pricing"><h3>Octopus</h3><h3>$20</h3></div>
 
-              <h3>Squid</h3>
+              <div class="pricing"><h3>Squid</h3><h3>$20</h3></div>
 
-              <h3>Salmon</h3>
+              <div class="pricing"><h3>Salmon</h3><h3>$20</h3></div>
 
-              <h3>Tuna</h3>
+              <div class="pricing"><h3>Tuna</h3><h3>$20</h3></div>
 
-              <h3>Yellow Tail</h3>
+              <div class="pricing"><h3>Yellow Tail</h3><h3>$20</h3></div>
 
-              <h3>King Crab</h3>
+              <div class="pricing"><h3>King Crab</h3><h3>$20</h3></div>
 
-              <h3>Fatty Tuna</h3>
+              <div class="pricing"><h3>Fatty Tuna</h3><h3>$20</h3></div>
 
-              <h3>Flounder</h3>
+              <div class="pricing"><h3>Flounder</h3><h3>$20</h3></div>
 
-              <h3>Fresh Water Eel</h3>
+              <div class="pricing"><h3>Fresh Water Eel</h3><h3>$20</h3></div>
 
-              <h3>Geoduck</h3>
+              <div class="pricing"><h3>Geoduck</h3><h3>$20</h3></div>
 
 
             </div>
             <div class="right">
-              <h5>Sushi</h5>
-              <h3>Tuna Festival</h3>
+              <div class="pricing"><h5>Sushi</h5></div>
+              <div class="pricing"><h3>Tuna Festival</h3><h3>$20</h3></div>
               <p>Tuna, Zuke-Tuna, Negi-Toro, Chu-Toro, O-Toro</p>
 
-              <h3>Regular Assortment</h3>
+              <div class="pricing"><h3>Regular Assortment</h3><h3>$20</h3></div>
               <p>10 pieces and 1 roll</p>
 
-              <h3>California Roll</h3>
+              <div class="pricing"><h3>California Roll</h3><h3>$20</h3></div>
               <p>Crab surimi, flying fish roe, cucumber & mayo</p>
 
-              <h3>Real Crab</h3>
+              <div class="pricing"><h3>Real Crab</h3><h3>$20</h3></div>
               <p>Crab, flying fish roe, and cucumber</p>
 
-              <h3>Dragon</h3>
+              <div class="pricing"><h3>Dragon</h3><h3>$20</h3></div>
               <p>Broiled unagi over california roll</p>
 
-              <h3>Salmon Skin</h3>
+              <div class="pricing"><h3>Salmon Skin</h3><h3>$20</h3></div>
               <p>Smoked salmon w/ crispy skin and daikon sprout</p>
 
-              <h3>Shrimp Tempura</h3>
+              <div class="pricing"><h3>Shrimp Tempura</h3><h3>$20</h3></div>
               <p>Shrimp tempura and cucumber</p>
 
-              <h3>Tenji's Roll</h3>
+              <div class="pricing"><h3>Tenji's Roll</h3><h3>$20</h3></div>
               <p>Pickled mackerel, ginger, and shiso leaf</p>
 
-              <h3>Tenji's Wrap</h3>
+              <div class="pricing"><h3>Tenji's Wrap</h3><h3>$20</h3></div>
               <p>Crab, spicy mayo, cucumber, wrapped in soy paper</p>
 
-              <h3>Spicy Tuna</h3>
+              <div class="pricing"><h3>Spicy Tuna</h3><h3>$20</h3></div>
               <p>Tuna with spicy sauce</p>
 
-              <h3>Tekka</h3>
+              <div class="pricing"><h3>Tekka</h3><h3>$20</h3></div>
               <p>Tuna</p>
 
             </div>
@@ -406,30 +406,30 @@
         <div id="dessert" class="tab">
         <div class="menu-items">
             <div class="left">
-              <h5>Desserts</h5>
-              <h3>Tempura Ice Cream</h3>
+              <div class="pricing"><h5>Desserts</h5></div>
+              <div class="pricing"><h3>Tempura Ice Cream</h3><h3>$20</h3></div>
               <p>A Choice of Vanilla, Green-Tea, Red-Beans</p>
 
-              <h3>Tenji's Flan Brulee</h3>
+              <div class="pricing"><h3>Tenji's Flan Brulee</h3><h3>$20</h3></div>
               <p>Tenji's Original Custard Pudding</p>
 
-              <h3>Mochi Ice Cream</h3>
+              <div class="pricing"><h3>Mochi Ice Cream</h3><h3>$20</h3></div>
               <p>2 pieces of bite-size ice cream - Ask server for available flavors</p>
 
-              <h3>Ice Cream</h3>
+              <div class="pricing"><h3>Ice Cream</h3><h3>$20</h3></div>
             </div>
             <div class="right">
-              <h5>Dessert Drinks</h5>
-              <h3>Drink #1</h3>
+              <div class="pricing"><h5>Dessert Drinks</h5></div>
+              <div class="pricing"><h3>Drink #1</h3><h3>$20</h3></div>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, corporis, libero.</p>
 
-              <h3>Drink #2</h3>
+              <div class="pricing"><h3>Drink #2</h3><h3>$20</h3></div>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, corporis, libero.</p>
 
-              <h3>Drink#3</h3>
+              <div class="pricing"><h3>Drink#3</h3><h3>$20</h3></div>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, corporis, libero.</p>
 
-              <h3>Drink #4</h3>
+              <div class="pricing"><h3>Drink #4</h3><h3>$20</h3></div>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, corporis, libero.</p>
             </div>
           </div>
